[package]
name = "sorted"
version = "0.1.0"
authors = ["Kim Simmons <zoomulator@gmail.com>"]
readme = "README.markdown"
keywords = ["sort", "collection"]
categories = ["rust-patterns"]
license = "MIT"
license-file = "./LICENSE"
description = "Provides compile time guarantees for sorted sequences."

[features]
default = []
unstable = []

[dependencies]
